# Asthma-controller-app

./: README.md  main.py  measurement_service.py  requirements.txt
asthma-controller-fastapi/: README.md  pyproject.toml  requirements.txt
asthma-controller-fastapi/alembic/: env.py  script.py.mako
asthma-controller-fastapi/app/: main.py  utils.py
asthma-controller-fastapi/app/models/: __init__.py  crud.py  database.py  models.py  schemas.py
asthma-controller-fastapi/app/routers/: medicine.py  readings.py  uploads.py  users.py
asthma-controller-fastapi/app/services/: analysis.py  notifications.py  plotting.py
db/: db_connection.py
models/: daily_measurement.py  medicine.py  taken_medicine.py
repositories/: daily_measurement_repo.py  medicine_repo.py
