[tool.poetry]
name = "asthma-controller-fastapi"
version = "0.1.0"
description = "A FastAPI application for managing asthma peak flow readings and related functionalities."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
alembic = "^1.7.5"
python-telegram-bot = "^13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
